--- a/data/epsg.ipynb
+++ b/data/epsg.ipynb
@@ -58,7 +58,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6934/6934 [00:03<00:00, 2068.25it/s]\n"
+      "100%|██████████| 6934/6934 [00:03<00:00, 2078.08it/s]\n"
      ]
     },
     {
@@ -4143,7 +4143,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open(\"./data/epsg.json\", \"w\") as f:\n",
+    "with open(\"./output/epsg.json\", \"w\") as f:\n",
     "    json.dump(epsg_codes, f, ensure_ascii=False, indent=4)"
    ]
   },
@@ -4170,7 +4170,7 @@
     }
    ],
    "source": [
-    "!head ./data/epsg.json"
+    "!head ./output/epsg.json"
    ]
   },
   {
@@ -4198,11 +4198,11 @@
      "data": {
       "text/plain": [
        "(9698,\n",
-       " [PosixPath('data/epsg/EPSG-v11_008-WKT/EPSG-CRS-10150.wkt'),\n",
-       "  PosixPath('data/epsg/EPSG-v11_008-WKT/EPSG-CRS-10151.wkt'),\n",
-       "  PosixPath('data/epsg/EPSG-v11_008-WKT/EPSG-CRS-10156.wkt'),\n",
-       "  PosixPath('data/epsg/EPSG-v11_008-WKT/EPSG-CRS-10157.wkt'),\n",
-       "  PosixPath('data/epsg/EPSG-v11_008-WKT/EPSG-CRS-10158.wkt')])"
+       " [PosixPath('epsg/EPSG-v11_008-WKT/EPSG-CRS-10150.wkt'),\n",
+       "  PosixPath('epsg/EPSG-v11_008-WKT/EPSG-CRS-10151.wkt'),\n",
+       "  PosixPath('epsg/EPSG-v11_008-WKT/EPSG-CRS-10156.wkt'),\n",
+       "  PosixPath('epsg/EPSG-v11_008-WKT/EPSG-CRS-10157.wkt'),\n",
+       "  PosixPath('epsg/EPSG-v11_008-WKT/EPSG-CRS-10158.wkt')])"
       ]
      },
      "execution_count": 8,
@@ -4211,7 +4211,7 @@
     }
    ],
    "source": [
-    "wkt_paths = sorted(Path(\"./data/epsg/EPSG-v11_008-WKT/\").glob(\"*.wkt\"))\n",
+    "wkt_paths = sorted(Path(\"./epsg/EPSG-v11_008-WKT/\").glob(\"*.wkt\"))\n",
     "len(wkt_paths), wkt_paths[:5]"
    ]
   },
@@ -4231,7 +4231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9698/9698 [00:10<00:00, 890.88it/s] \n"
+      "100%|██████████| 9698/9698 [00:11<00:00, 857.79it/s] \n"
      ]
     },
     {
@@ -4304,7 +4304,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9698/9698 [00:09<00:00, 1070.59it/s]\n"
+      "100%|██████████| 9698/9698 [00:09<00:00, 1042.34it/s]\n"
      ]
     },
     {
