--- a/data/merge.ipynb
+++ b/data/merge.ipynb
@@ -4044,7 +4044,7 @@
     }
    ],
    "source": [
-    "with open(\"./data/epsg.json\") as f:\n",
+    "with open(\"./output/epsg.json\") as f:\n",
     "    epsg = json.load(f)\n",
     "len(epsg), epsg"
    ]
@@ -5827,7 +5827,7 @@
     }
    ],
    "source": [
-    "with open(\"./data/jpx.json\") as f:\n",
+    "with open(\"./output/jpx.json\") as f:\n",
     "    jpx = json.load(f)\n",
     "len(jpx), jpx"
    ]
@@ -5940,12 +5940,12 @@
     {
      "data": {
       "text/plain": [
-       "('6962',\n",
-       " {'epsg': {'name': 'ETRS89 / Albania LCC 2010',\n",
-       "   'area_of_use': 'Albania - onshore.',\n",
-       "   'coordinate_operation': 'Albania LCC 2010',\n",
+       "('5958',\n",
+       " {'epsg': {'name': 'ETRS89 / NTM zone 18 + NN2000 height',\n",
+       "   'area_of_use': 'Norway - onshore - between 18°E and 19°E.',\n",
+       "   'coordinate_operation': None,\n",
        "   'datum': 'European Terrestrial Reference System 1989 ensemble'},\n",
-       "  'jpx': {'name': '大真空', 'market': 'プライム（内国株式）', 'industry': '電気機器'}})"
+       "  'jpx': {'name': '三洋工業', 'market': 'スタンダード（内国株式）', 'industry': '金属製品'}})"
       ]
      },
      "execution_count": 7,
@@ -5965,11 +5965,11 @@
     {
      "data": {
       "text/plain": [
-       "('5109',\n",
-       " {'epsg': {'name': 'ETRS89 / NTM zone 9',\n",
-       "   'area_of_use': 'Norway - onshore - between 9°E and 10°E.',\n",
-       "   'coordinate_operation': 'Norway TM zone 9',\n",
-       "   'datum': 'European Terrestrial Reference System 1989 ensemble'},\n",
+       "('27222',\n",
+       " {'epsg': {'name': 'NZGD49 / Okarito Circuit',\n",
+       "   'area_of_use': 'New Zealand - South Island - Okarito meridional circuit area.',\n",
+       "   'coordinate_operation': 'Okarito Circuit',\n",
+       "   'datum': 'New Zealand Geodetic Datum 1949'},\n",
        "  'jpx': None})"
       ]
      },
@@ -5990,9 +5990,9 @@
     {
      "data": {
       "text/plain": [
-       "('5138',\n",
+       "('6718',\n",
        " {'epsg': None,\n",
-       "  'jpx': {'name': 'Rebase', 'market': 'グロース（内国株式）', 'industry': '情報・通信業'}})"
+       "  'jpx': {'name': 'アイホン', 'market': 'プライム（内国株式）', 'industry': '電気機器'}})"
       ]
      },
      "execution_count": 9,
@@ -6017,7 +6017,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./data/all.json\", \"w\") as f:\n",
+    "with open(\"./output/all.json\", \"w\") as f:\n",
     "    json.dump(all_codes_grouped, f, ensure_ascii=False, indent=4)"
    ]
   },
@@ -6054,7 +6054,7 @@
     }
    ],
    "source": [
-    "!head -20 ./data/all.json"
+    "!head -20 ./output/all.json"
    ]
   }
  ],
