Change output format to lists

--- a/data/merge.ipynb
+++ b/data/merge.ipynb
@@ -5869,7 +5869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -5878,7 +5878,7 @@
        "8672"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5904,29 +5904,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epsg_and_jpx 2622\n",
-      "epsg_only 4312\n",
-      "jpx_only 1738\n"
+      "both 2622\n",
+      "epsg 4312\n",
+      "jpx 1738\n"
      ]
     }
    ],
    "source": [
-    "all_codes_grouped = {\"epsg_and_jpx\": {}, \"epsg_only\": {}, \"jpx_only\": {}}\n",
+    "all_codes_grouped = {\"both\": [], \"epsg\": [], \"jpx\": []}\n",
     "\n",
     "for code, data in all_codes.items():\n",
     "    if data[\"epsg\"] and data[\"jpx\"]:\n",
-    "        all_codes_grouped[\"epsg_and_jpx\"][code] = data\n",
+    "        group = \"both\"\n",
     "    elif data[\"epsg\"]:\n",
-    "        all_codes_grouped[\"epsg_only\"][code] = data\n",
+    "        group = \"epsg\"\n",
     "    elif data[\"jpx\"]:\n",
-    "        all_codes_grouped[\"jpx_only\"][code] = data\n",
+    "        group = \"jpx\"\n",
+    "\n",
+    "    all_codes_grouped[group].append(\n",
+    "        {\n",
+    "            \"code\": code,\n",
+    "            **data,\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "for k, v in all_codes_grouped.items():\n",
     "    print(k, len(v))"
@@ -5934,74 +5941,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('5958',\n",
-       " {'epsg': {'name': 'ETRS89 / NTM zone 18 + NN2000 height',\n",
-       "   'area_of_use': 'Norway - onshore - between 18°E and 19°E.',\n",
-       "   'coordinate_operation': None,\n",
-       "   'datum': 'European Terrestrial Reference System 1989 ensemble'},\n",
-       "  'jpx': {'name': '三洋工業', 'market': 'スタンダード（内国株式）', 'industry': '金属製品'}})"
+       "{'code': '3521',\n",
+       " 'epsg': {'name': 'NAD83(NSRS2007) / Georgia West (ftUS)',\n",
+       "  'area_of_use': 'United States (USA) - Georgia - counties of Baker; Banks; Barrow; Bartow; Ben Hill; Berrien; Bibb; Bleckley; Brooks; Butts; Calhoun; Carroll; Catoosa; Chattahoochee; Chattooga; Cherokee; Clarke; Clay; Clayton; Cobb; Colquitt; Cook; Coweta; Crawford; Crisp; Dade; Dawson; De Kalb; Decatur; Dooly; Dougherty; Douglas; Early; Fannin; Fayette; Floyd; Forsyth; Fulton; Gilmer; Gordon; Grady; Gwinnett; Habersham; Hall; Haralson; Harris; Heard; Henry; Houston; Irwin; Jackson; Jasper; Jones; Lamar; Lee; Lowndes; Lumpkin; Macon; Marion; Meriwether; Miller; Mitchell; Monroe; Morgan; Murray; Muscogee; Newton; Oconee; Paulding; Peach; Pickens; Pike; Polk; Pulaski; Putnam; Quitman; Rabun; Randolph; Rockdale; Schley; Seminole; Spalding; Stewart; Sumter; Talbot; Taylor; Terrell; Thomas; Tift; Towns; Troup; Turner; Twiggs; Union; Upson; Walker; Walton; Webster; White; Whitfield; Wilcox; Worth.',\n",
+       "  'coordinate_operation': 'SPCS83 Georgia West zone (US Survey feet)',\n",
+       "  'datum': 'NAD83 (National Spatial Reference System 2007)'},\n",
+       " 'jpx': {'name': 'エコナックホールディングス',\n",
+       "  'market': 'スタンダード（内国株式）',\n",
+       "  'industry': 'サービス業'}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random.choice(list(all_codes_grouped[\"epsg_and_jpx\"].items()))"
+    "random.choice(all_codes_grouped[\"both\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('27222',\n",
-       " {'epsg': {'name': 'NZGD49 / Okarito Circuit',\n",
-       "   'area_of_use': 'New Zealand - South Island - Okarito meridional circuit area.',\n",
-       "   'coordinate_operation': 'Okarito Circuit',\n",
-       "   'datum': 'New Zealand Geodetic Datum 1949'},\n",
-       "  'jpx': None})"
+       "{'code': '7295',\n",
+       " 'epsg': {'name': 'NAD83(2011) / InGCS Fayette-Franklin-Union (m)',\n",
+       "  'area_of_use': 'United States (USA) - Indiana - counties of Fayette, Franklin and Union.',\n",
+       "  'coordinate_operation': 'InGCS Fayette-Franklin-Union (m)',\n",
+       "  'datum': 'NAD83 (National Spatial Reference System 2011)'},\n",
+       " 'jpx': None}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random.choice(list(all_codes_grouped[\"epsg_only\"].items()))"
+    "random.choice(all_codes_grouped[\"epsg\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('6718',\n",
-       " {'epsg': None,\n",
-       "  'jpx': {'name': 'アイホン', 'market': 'プライム（内国株式）', 'industry': '電気機器'}})"
+       "{'code': '6037',\n",
+       " 'epsg': None,\n",
+       " 'jpx': {'name': 'ファーストロジック', 'market': 'スタンダード（内国株式）', 'industry': 'サービス業'}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random.choice(list(all_codes_grouped[\"jpx_only\"].items()))"
+    "random.choice(all_codes_grouped[\"jpx\"])"
    ]
   },
   {
@@ -6013,7 +6022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6023,7 +6032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -6031,8 +6040,9 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"epsg_and_jpx\": {\n",
-      "        \"2001\": {\n",
+      "    \"both\": [\n",
+      "        {\n",
+      "            \"code\": \"2001\",\n",
       "            \"epsg\": {\n",
       "                \"name\": \"Antigua 1943 / British West Indies Grid\",\n",
       "                \"area_of_use\": \"Antigua island - onshore.\",\n",
@@ -6045,16 +6055,32 @@
       "                \"industry\": \"食料品\"\n",
       "            }\n",
       "        },\n",
-      "        \"2002\": {\n",
+      "        {\n",
+      "            \"code\": \"2002\",\n",
       "            \"epsg\": {\n",
-      "                \"name\": \"Dominica 1945 / British West Indies Grid\",\n",
-      "                \"area_of_use\": \"Dominica - onshore.\",\n",
-      "                \"coordinate_operation\": \"British West Indies Grid\",\n"
+      "                \"name\": \"Dominica 1945 / British West Indies Grid\",\n"
      ]
     }
    ],
    "source": [
     "!head -20 ./output/all.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-rw-r--r--  1 sorami  staff   3.7M May 21 19:56 ./output/all.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -alh ./output/all.json"
    ]
   }
  ],
