--- a/data/merge.ipynb
+++ b/data/merge.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "(8672, {'epsg': 'WGS 84', 'jpx': 'インテージホールディングス'})"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -151,16 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'code': '8999', 'epsg': 'ITRF2008', 'jpx': 'グランディハウス'}"
+       "{'code': '6616',\n",
+       " 'epsg': 'NAD83(2011) / Wyoming West (ftUS)',\n",
+       " 'jpx': 'トレックス・セミコンダクター'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'code': '8683', 'epsg': 'SRB_ETRS89', 'jpx': None}"
+       "{'code': '3260', 'epsg': 'WGS 84 / SCAR IMW ST01-04', 'jpx': None}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'code': '1452', 'epsg': None, 'jpx': '横浜ライト工業'}"
+       "{'code': '6898', 'epsg': None, 'jpx': 'トミタ電機'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,12 +215,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 4 桁の数字のみ\n",
+    "\n",
+    "ゲーム性を考慮し、候補を絞る（例えば 5 桁が出てきたら、これは証券コードではないとすぐわかってしまうため）。\n",
+    "\n",
+    "- 5 桁の EPSG コード\n",
+    "- 5 桁の証券コード\n",
+    "- 4 桁の証券コードで、数字のみではないもの\n",
+    "\n",
+    "が除外される。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({4: 2497, 5: 1815})\n",
+      "Counter({4: 1736, 5: 2})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "print(Counter([len(c[\"code\"]) for c in all_codes_grouped[\"epsg\"]]))\n",
+    "print(Counter([len(c[\"code\"]) for c in all_codes_grouped[\"jpx\"]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'code': '130A', 'epsg': None, 'jpx': 'Veritas In Silico'},\n",
+       " {'code': '131A', 'epsg': None, 'jpx': 'CCNグループ'},\n",
+       " {'code': '132A', 'epsg': None, 'jpx': 'アイエヌホールディングス'},\n",
+       " {'code': '133A', 'epsg': None, 'jpx': 'グローバルX 超短期米国債 ETF'},\n",
+       " {'code': '134A', 'epsg': None, 'jpx': 'アプライズ'}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[c for c in all_codes_grouped[\"jpx\"] if not c[\"code\"].isdigit()][:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "both 2622\n",
+      "epsg 2497\n",
+      "jpx 1683\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_codes_grouped_4_digits = {}\n",
+    "\n",
+    "for g in [\"both\", \"epsg\", \"jpx\"]:\n",
+    "    all_codes_grouped_4_digits[g] = [\n",
+    "        c for c in all_codes_grouped[g] if c[\"code\"].isdigit() and len(c[\"code\"]) == 4\n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "for k, v in all_codes_grouped_4_digits.items():\n",
+    "    print(k, len(v))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 出力\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +318,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./output/all_4digits.json\", \"w\") as f:\n",
+    "    json.dump(all_codes_grouped_4_digits, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-rw-r--r--  1 sorami  staff   1.1M May 22 09:43 ./output/all.json\n",
+      "-rw-r--r--  1 sorami  staff   871K May 22 09:43 ./output/all_4digits.json\n",
+      "-rw-r--r--  1 sorami  staff   2.1M May 21 21:01 ./output/epsg.json\n",
+      "-rw-r--r--  1 sorami  staff   644K May 21 13:43 ./output/jpx.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -lh ./output/*.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -244,39 +364,38 @@
       "        },\n",
       "        {\n",
       "            \"code\": \"2002\",\n",
-      "            \"epsg\": \"Dominica 1945 / British West Indies Grid\",\n",
-      "            \"jpx\": \"日清製粉グループ本社\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"code\": \"2003\",\n",
-      "            \"epsg\": \"Grenada 1953 / British West Indies Grid\",\n",
-      "            \"jpx\": \"日東富士製粉\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"code\": \"2004\",\n",
-      "            \"epsg\": \"Montserrat 1958 / British West Indies Grid\",\n"
+      "            \"epsg\": \"Dominica 1945 / British West Indies Grid\",\n"
      ]
     }
    ],
    "source": [
-    "!head -20 ./output/all.json"
+    "!head ./output/all.json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 sorami  staff   1.1M May 21 21:05 ./output/all.json\n"
+      "{\n",
+      "    \"both\": [\n",
+      "        {\n",
+      "            \"code\": \"2001\",\n",
+      "            \"epsg\": \"Antigua 1943 / British West Indies Grid\",\n",
+      "            \"jpx\": \"ニップン\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"code\": \"2002\",\n",
+      "            \"epsg\": \"Dominica 1945 / British West Indies Grid\",\n"
      ]
     }
    ],
    "source": [
-    "!ls -alh ./output/all.json"
+    "!head ./output/all_4digits.json"
    ]
   }
  ],
