--- a/data/epsg.ipynb
+++ b/data/epsg.ipynb
@@ -58,7 +58,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6934/6934 [00:03<00:00, 2078.08it/s]\n"
+      "100%|██████████| 6934/6934 [00:03<00:00, 2026.28it/s]\n"
      ]
     },
     {
@@ -4139,6 +4139,37 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({4: 5119, 5: 1815})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "Counter([len(c) for c in epsg_codes.keys()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert all([c.isdigit() for c in epsg_codes.keys()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -4149,7 +4180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4191,7 +4222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4205,7 +4236,7 @@
        "  PosixPath('epsg/EPSG-v11_008-WKT/EPSG-CRS-10158.wkt')])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4224,14 +4255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9698/9698 [00:11<00:00, 857.79it/s] \n"
+      "100%|██████████| 9698/9698 [00:10<00:00, 901.44it/s] \n"
      ]
     },
     {
@@ -4240,7 +4271,7 @@
        "(6936, 2762)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4270,7 +4301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4279,7 +4310,7 @@
        "{'Internal Proj Error: proj_create: crs not found)'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4297,14 +4328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9698/9698 [00:09<00:00, 1042.34it/s]\n"
+      "100%|██████████| 9698/9698 [00:08<00:00, 1109.67it/s]\n"
      ]
     },
     {
@@ -4313,7 +4344,7 @@
        "(6550, 2690)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4343,7 +4374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4352,7 +4383,7 @@
        "'JGD2011 / Japan Plane Rectangular CS I + JGD2011 (vertical) height'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4363,7 +4394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4372,7 +4403,7 @@
        "'WGS 84'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4390,7 +4421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4401,7 +4432,7 @@
        "         'Invalid WKT string': 5})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4412,7 +4443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4422,7 +4453,7 @@
        "         'Input is not a CRS: CONCATENATEDOPERATION': 186})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4440,7 +4471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4451,7 +4482,7 @@
        "         'Invalid projection: CONCATENATEDOPERATION': 1})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4469,7 +4500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4479,7 +4510,7 @@
        "         'Invalid WKT string: POINTMOTIONOPERATION[\"New Caledonia velocity model 2015\",SOURCECRS[GEODCRS[\"RGNC15\",DATUM[\"Reseau Geodesique de Nouvelle Caledonie 2015\",ELLIPSOID[\"GRS 1980\",6378137,298.257222101,LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]],ID[\"EPSG\",7019]],ID[\"EPSG\",1357]],CS[Cartesian,3,ID[\"EPSG\",6500]],AXIS[\"Geocentric X (X)\",geocentricX,LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]]],AXIS[\"Geocentric Y (Y)\",geocentricY,LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]]],AXIS[\"Geocentric Z (Z)\",geocentricZ,LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]]],ID[\"EPSG\",10308]]],METHOD[\"Point motion (geocen) by grid (BGN)\",ID[\"EPSG\",1120]],PARAMETERFILE[\"Point motion velocity grid file\",\"grmmncl08.tac\",ID[\"EPSG\",1050]],PARAMETER[\"EPSG code for Interpolation CRS\",10312,ID[\"EPSG\",1048]],OPERATIONACCURACY[0.075],ID[\"EPSG\",10323]]': 1})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
